Comecei a escrever o contéudo

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Titulo do site</h1>
+            <h1>Curso Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem doloremque cupiditate quibusdam laboriosam veniam est molestiae quo id excepturi ea a facilis alias aperiam iste praesentium sapiente, totam deleniti vel!</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>curso de JavaScrip</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo corrupti molestias ipsam ut necessitatibus iste quos, totam, asperiores possimus est rerum adipisci maxime dolorum dolores dolorem odio quasi facere rem.</p>
         </article>
     </main>
 </body>
